--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -40,7 +40,8 @@
 		\begin{figure}
             \begin{center}
                 \def\svgwidth{60mm}
-                \input{input.pdf_tex}
+                %\input{input.pdf_tex}
+                \includegraphics[width=60mm]{input}
                 \caption{Input image}
             \end{center}
 		\end{figure}
@@ -50,7 +51,8 @@
         \begin{figure}
             \begin{center}
                \def\svgwidth{60mm}
-               \input{superpixels.pdf_tex}
+               %\input{superpixels.pdf_tex}
+               \includegraphics[width=60mm]{superpixels}
                \caption{Generated superpixels}
            \end{center}
         \end{figure}
@@ -60,7 +62,8 @@
         \begin{figure}
             \begin{center}
                 \def\svgwidth{60mm}
-                \input{segments.pdf_tex}
+                %\input{segments.pdf_tex}
+                \includegraphics[width=60mm]{segments}
                 \caption{Master nodes and segments}
             \end{center}
         \end{figure}
