--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -82,10 +82,10 @@
         
 		The problem reads as follows:
 		\begin{align}
-    		&\min\quad \sum_{p\in\mathcal{P}} r_P\cdot x_P\\
+    		&\min\quad \sum_{P\in\mathcal{P}} r_P\cdot x_P\\
 		    &\text{s.t.}\quad \smashoperator{\sum_{\{P\in\mathcal{P}:s\in P\}}} x_P = 1 \quad\forall s\in\superpixels \\
 		    &\phantom{\text{s.t.}\quad} \sum_{P\in\mathcal{P}} x_P = k \\
-		    &\phantom{\text{s.t.}\quad} x_P \in \{0,1\}
+		    &\phantom{\text{s.t.}\quad} x_P \in \{0,1\} \quad\forall P\in\segments
 		\end{align}
 	\end{frame}
 	
@@ -100,7 +100,7 @@
 		\begin{align}
 		    &\max\quad \smashoperator{\sum_{s\in\superpixels}} \mu_s + k\cdot\lambda \\
 		    &\text{s.t.}\quad \sum_{s\in P} \mu_s + \lambda \leq r_P \quad\forall P\in\mathcal{P} \\
-		    &\phantom{\text{s.t.}\quad} \mu_s \text{ free} \\
+		    &\phantom{\text{s.t.}\quad} \mu_s \text{ free} \quad\forall s\in\superpixels \\
 		    &\phantom{\text{s.t.}\quad} \lambda \text{ free}
 		\end{align}
 	\end{frame}
@@ -112,15 +112,17 @@
 		If $s\in\superpixels$ is in the new segment, then $x_s=1$.		
 		 
 		\begin{align}
-    		&\min\quad -\sum_{s\in\superpixels} x_s\cdot\mu_s + \sum_{s\in\superpixels} x_s\cdot|y_t-y_s| \\
+    		&\min\quad \underbrace{\sum_{s\in\superpixels} x_s\cdot|y_t-y_s|}_{=r_{\{s\in\superpixels\ :\ x_s=1\}}} - \sum_{s\in\superpixels} x_s\cdot\mu_s \\
     		&\text{s.t.}\quad \text{connectivity constraint} \\
-	    	&\phantom{\text{s.t.}\quad} x_s \in\{0,1\}
+            &\phantom{\text{s.t.}\quad} x_t = 1 \\
+            &\phantom{\text{s.t.}\quad} x_{t'} = 0 \quad\forall t'\in T\setminus\{t\} \\
+	    	&\phantom{\text{s.t.}\quad} x_s \in\{0,1\} \quad\forall s\in\superpixels
 		\end{align}
 	\end{frame}
 	
 	\begin{frame}{Pricing problem}
 		Constraint (6) of the dual problem is violated by the new segment if and only if
-		\[-\sum_{s\in\superpixels} x_s\cdot\mu_s + \underbrace{\sum_{s\in\superpixels} x_s\cdot|y_t-y_s|}_{=r_{\{s\in\superpixels\ :\ x_s=1\}}} < \lambda.\]
+		\[\underbrace{\sum_{s\in\superpixels} x_s\cdot|y_t-y_s|}_{=r_{\{s\in\superpixels\ :\ x_s=1\}}} - \sum_{s\in\superpixels} x_s\cdot\mu_s < \lambda.\]
         
 		Therefore, a new segment has to satisfy this inequality in order to be added to the master problem.
 	\end{frame}
@@ -158,14 +160,7 @@
 	\end{frame}
 
     \begin{frame}{What is SCIP?}
-        \begin{figure}
-            \includegraphics{comparison}
-            \caption{MIP solver benchmark}
-        \end{figure}
-    \end{frame}
-
-    \begin{frame}{What is SCIP?}
-        SCIP is developed at the Zuse Institute Berlin.
+        SCIP is developed at the Zuse Institute Berlin (ZIB).
         It is written in C, but can also be interfaced using
         \begin{itemize}
             \item C++
@@ -180,7 +175,16 @@
         \end{itemize}
     \end{frame}
 
+    \begin{frame}{What is SCIP?}
+        \begin{figure}
+            \includegraphics{comparison}
+            \caption{MIP solver benchmark}
+        \end{figure}
+    \end{frame}
+
     \begin{frame}{Advantages}
+        SCIP is non-commercial and open source.
+    
         SCIP supports cutomizing
         \begin{itemize}
             \item Constraint handlers % d.h. eigene Arten von constraints und auch cutting planes
