Include problem description in documentation

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -68,7 +68,7 @@
         Given data in the theoretical formulation of the master problem:
         \begin{itemize}
             \item $\superpixels$: set of superpixels
-            \item $\segments$: set of segments %sagen: connected
+            \item $\segments\subset2^\superpixels$: set of segments %sagen: connected
             \item $y_s\geq0$: color of superpixel $s\in\superpixels$
             \item $T\subseteq\superpixels$: set of master nodes %number of segments to select = #T
             \item $k=|T|$: number of segments to cover the image with
