Add documentation section to slides

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -449,4 +449,31 @@ for (int i = 0; i < SCIPgetNVars(scip); ++i)
     \end{frame}
     
     \section{Demo}
+    \begin{frame}{Documentation}
+        \begin{figure}
+            \centering
+            \includegraphics[width=20em]{mainpage}
+            \caption{Main Page}
+        \end{figure}
+    \end{frame}
+
+    \begin{frame}{Documentation}
+        \begin{figure}
+            \centering
+            \includegraphics[width=20em]{overviewdoc}
+            \caption{Function overview}
+        \end{figure}
+    \end{frame}
+
+    \begin{frame}{Documentation}
+        \begin{figure}
+            \centering
+            \includegraphics[width=20em]{detaildoc}
+            \caption{Detailed description}
+        \end{figure}
+    \end{frame}
+
+    \begin{frame}[standout]
+        Demo
+    \end{frame}
 \end{document}
