Upload PDF output

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -34,9 +34,8 @@
 	\begin{frame}{Task}
 		\begin{figure}
             \begin{center}
-               % \def\svgwidth{60mm}
-                %\input{input.pdf_tex}
-                \includegraphics[width=60mm]{input}
+                \def\svgwidth{60mm}
+                \input{input.pdf_tex}
                 \caption{Input image}
             \end{center}
 		\end{figure}
@@ -45,9 +44,8 @@
     \begin{frame}{Task}
         \begin{figure}
             \begin{center}
-             %  \def\svgwidth{60mm}
-               %\input{superpixels.pdf_tex}
-               \includegraphics[width=60mm]{superpixels}
+               \def\svgwidth{60mm}
+               \input{superpixels.pdf_tex}
                \caption{Generated superpixels}
            \end{center}
         \end{figure}
@@ -56,9 +54,8 @@
     \begin{frame}{Task}
         \begin{figure}
             \begin{center}
-                %\def\svgwidth{60mm}
-                %\input{segments.pdf_tex}
-                \includegraphics[width=60mm]{segments}
+                \def\svgwidth{60mm}
+                \input{segments.pdf_tex}
                 \caption{Master nodes and segments}
             \end{center}
         \end{figure}
